# Generated by Django 6.0.3 on 2026-05-15 04:13

import django.db.models.deletion
import events.models
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Event',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=50, unique=True)),
                ('slug', models.SlugField(blank=True, max_length=60, unique=True)),
                ('event_type', models.CharField(choices=[('senior', 'Senior'), ('junior', 'Junior'), ('feast', 'Feast'), ('other', 'Other')], default='other', max_length=10)),
                ('base_price_cents', models.IntegerField(help_text='Base price of a ticket for the event before discounts in cents.\nI.E. 5000 would be equivalent to $50.\nServes as a fallback if price tiers are provided that is used if a user does not fall into any age bracket.')),
                ('registration_available', models.BooleanField(default=True, help_text='Disables registration buttons if unchecked while allowing information for events to be shared.')),
                ('start_time', models.DateTimeField(default=events.models.default_start_time)),
                ('end_time', models.DateTimeField(default=events.models.default_end_time)),
                ('downtime_due', models.DateTimeField(default=events.models.default_downtime_due, help_text='This is the date by which attendees of the event must respond to the post event survey.')),
                ('event_image', models.ImageField(blank=True, help_text='The image that appears for this event in registration and event pages. A default image is Hardcoded if none is provided.', upload_to=events.models.upload_event_main)),
                ('photographer', models.CharField(blank=True, max_length=50, null=True)),
            ],
            options={
                'ordering': ['-start_time'],
            },
        ),
        migrations.CreateModel(
            name='Question',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('question_type', models.CharField(choices=[('mc_single', 'Multiple Choice (single)'), ('mc_multi', 'Multiple Choice (multiple)'), ('text', 'Short/Long Text'), ('rating', 'Rating (e.g., 1-5)')], default='text', max_length=20)),
                ('text', models.CharField(max_length=300)),
            ],
        ),
        migrations.CreateModel(
            name='EventAttendee',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('checked_in', models.BooleanField(default=False)),
                ('arrival_time', models.TimeField()),
                ('base_price_cents', models.PositiveIntegerField(help_text='Base price before discounts, in cents')),
                ('final_price_cents', models.PositiveIntegerField(help_text='Final price charged, in cents')),
                ('discounts', models.JSONField(blank=True, default=list, help_text='Applied discounts snapshot')),
                ('additional_items', models.JSONField(blank=True, default=list, help_text='Additional items charged snapshot')),
                ('payment_status', models.CharField(choices=[('pending', 'Pending'), ('complete', 'Complete'), ('refunded', 'Refunded')], default='pending', max_length=10)),
                ('event', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='registrations', to='events.event')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='registrations', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.AddField(
            model_name='event',
            name='attendees',
            field=models.ManyToManyField(related_name='events', through='events.EventAttendee', to=settings.AUTH_USER_MODEL),
        ),
        migrations.CreateModel(
            name='EventMedia',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('image', models.ImageField(upload_to=events.models.upload_event_album)),
                ('alt_text', models.CharField(max_length=100)),
                ('event', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pictures', to='events.event')),
            ],
            options={
                'verbose_name': 'Picture',
                'verbose_name_plural': 'Pictures',
            },
        ),
        migrations.CreateModel(
            name='EventPriceTier',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('label', models.CharField(max_length=30)),
                ('min_age', models.PositiveSmallIntegerField(help_text='Lower Age Requirement for this tier.')),
                ('max_age', models.PositiveSmallIntegerField(help_text='Upper Age Requirement for this tier.')),
                ('price_cents', models.PositiveIntegerField(help_text="Base price of a ticket for the provided age range in cents. Overrides the Event's Base Price.")),
                ('event', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='price_tiers', to='events.event')),
            ],
        ),
        migrations.CreateModel(
            name='Choice',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('label', models.CharField(max_length=100)),
                ('position', models.PositiveIntegerField(default=0, help_text='Lower numbers appear first.')),
                ('question', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='choices', to='events.question')),
            ],
            options={
                'ordering': ['position'],
            },
        ),
        migrations.CreateModel(
            name='Survey',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('survey_type', models.CharField(choices=[('post_event', 'Post Event'), ('new_player', 'New Player'), ('other', 'Other')], default='post_event', max_length=20)),
                ('title', models.CharField(help_text='If linked to an event, defaults to "{Event Type} Post Event Survey: {Event Title}".', max_length=80)),
                ('description', models.CharField(blank=True, default='', max_length=500)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('event', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='surveys', to='events.event')),
            ],
        ),
        migrations.CreateModel(
            name='Response',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('submitted_at', models.DateTimeField(auto_now_add=True)),
                ('user', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='survey_submissions', to=settings.AUTH_USER_MODEL)),
                ('survey', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='submissions', to='events.survey')),
            ],
        ),
        migrations.CreateModel(
            name='SurveyQuestion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('position', models.PositiveIntegerField(default=0, help_text='Lower numbers appear first.')),
                ('is_required', models.BooleanField(default=True)),
                ('question', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='survey_links', to='events.question')),
                ('survey', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='survey_questions', to='events.survey')),
            ],
            options={
                'ordering': ['position'],
            },
        ),
        migrations.AddField(
            model_name='survey',
            name='questions',
            field=models.ManyToManyField(related_name='surveys', through='events.SurveyQuestion', to='events.question'),
        ),
        migrations.CreateModel(
            name='Answer',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('text_response', models.TextField(blank=True, null=True)),
                ('selected_choices', models.ManyToManyField(blank=True, related_name='answers', to='events.choice')),
                ('question', models.ForeignKey(editable=False, on_delete=django.db.models.deletion.PROTECT, to='events.question')),
                ('response', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='answers', to='events.response')),
                ('survey_question', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='answers', to='events.surveyquestion')),
            ],
        ),
        migrations.AddConstraint(
            model_name='eventattendee',
            constraint=models.UniqueConstraint(fields=('event', 'user'), name='unique_registration'),
        ),
        migrations.AddConstraint(
            model_name='choice',
            constraint=models.UniqueConstraint(fields=('question', 'label'), name='uq_choice_text_per_question'),
        ),
        migrations.AddIndex(
            model_name='response',
            index=models.Index(fields=['survey', 'submitted_at'], name='events_resp_survey__8f3f9e_idx'),
        ),
        migrations.AddConstraint(
            model_name='surveyquestion',
            constraint=models.UniqueConstraint(fields=('survey', 'question'), name='uq_survey_question_once'),
        ),
        migrations.AddConstraint(
            model_name='answer',
            constraint=models.UniqueConstraint(fields=('response', 'survey_question'), name='uq_one_answer_per_survey_question_per_submission'),
        ),
    ]
